--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -2,16 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a706a7a9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "from lxml import etree\n",
-    "\n",
+    "from lxml import etree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "42e7a2a6-266e-4f65-a2e9-8a6175546f54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transformation complete. Output saved to output/dspace-oai-dc_transformed.xml\n"
+     ]
+    }
+   ],
+   "source": [
     "# Load the XML file\n",
-    "xml_file = 'test-dspace/1735315236_DSPACE_OAI_10673_1169.xml'\n",
+    "xml_file = 'example/dspace-oai-dc.xml'\n",
     "xml_tree = etree.parse(xml_file)\n",
     "\n",
     "# Load the XSLT file\n",
@@ -39,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "06486a0a",
    "metadata": {},
    "outputs": [
@@ -47,193 +63,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Transformation complete. Output saved to output/1735549041_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_2_transformed.xml\n"
+      "Transformation complete. Output saved to output/archivesspace-ead_transformed.xml\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "from lxml import etree\n",
     "\n",
     "# Load the XML file\n",
-    "xml_file = 'test-archivesspace/1735549041_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_2.xml'\n",
+    "xml_file = 'example/archivesspace-ead.xml'\n",
     "xml_tree = etree.parse(xml_file)\n",
     "\n",
     "# Load the XSLT file\n",
-    "xslt_file = 'xsl/own.xsl'\n",
+    "xslt_file = 'xsl/EAD2MARC21_own.xsl'\n",
     "xslt_tree = etree.parse(xslt_file)\n",
     "\n",
     "# Perform the transformation\n",
     "transform = etree.XSLT(xslt_tree)\n",
-    "\n",
-    "# Capture any errors or warnings during the transformation\n",
-    "try:\n",
-    "    result_tree = transform(xml_tree)\n",
-    "except etree.XSLTApplyError as e:\n",
-    "    print(f\"Transformation failed: {e.error_log}\")\n",
-    "    for error in e.error_log:\n",
-    "        print(error.message)\n",
-    "    exit(1)\n",
-    "\n",
-    "# Check if the transformation was successful\n",
-    "if result_tree.getroot() is None:\n",
-    "    print(\"Transformation failed or produced an empty result.\")\n",
-    "else:\n",
-    "    # Create the output directory if it doesn't exist\n",
-    "    output_dir = 'output'\n",
-    "    os.makedirs(output_dir, exist_ok=True)\n",
-    "\n",
-    "    # Generate the output filename\n",
-    "    base_name = os.path.basename(xml_file)\n",
-    "    name, ext = os.path.splitext(base_name)\n",
-    "    output_file = os.path.join(output_dir, f'{name}_transformed{ext}')\n",
-    "\n",
-    "    # Save the result to the new file\n",
-    "    result_tree.write(output_file, pretty_print=True, xml_declaration=True, encoding='UTF-8')\n",
-    "\n",
-    "    print(f'Transformation complete. Output saved to {output_file}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "7678b223",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Transformation complete for 1735549072_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_18.xml. Output saved to output/1735549072_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_18_transformed.xml\n",
-      "Transformation complete for 1735549054_ARCHIVESSPACE_OAI_archivesspace__repositories_4_resources_12.xml. Output saved to output/1735549054_ARCHIVESSPACE_OAI_archivesspace__repositories_4_resources_12_transformed.xml\n",
-      "Transformation complete for 1735549082_ARCHIVESSPACE_OAI_archivesspace__repositories_4_resources_22.xml. Output saved to output/1735549082_ARCHIVESSPACE_OAI_archivesspace__repositories_4_resources_22_transformed.xml\n",
-      "Transformation complete for 1735549046_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_6.xml. Output saved to output/1735549046_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_6_transformed.xml\n",
-      "Transformation complete for 1735549049_ARCHIVESSPACE_OAI_archivesspace__repositories_4_resources_8.xml. Output saved to output/1735549049_ARCHIVESSPACE_OAI_archivesspace__repositories_4_resources_8_transformed.xml\n",
-      "Transformation complete for 1735549050_ARCHIVESSPACE_OAI_archivesspace__repositories_4_resources_9.xml. Output saved to output/1735549050_ARCHIVESSPACE_OAI_archivesspace__repositories_4_resources_9_transformed.xml\n",
-      "Transformation complete for 1735549057_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_14.xml. Output saved to output/1735549057_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_14_transformed.xml\n",
-      "Transformation complete for 1735549052_ARCHIVESSPACE_OAI_archivesspace__repositories_4_resources_10.xml. Output saved to output/1735549052_ARCHIVESSPACE_OAI_archivesspace__repositories_4_resources_10_transformed.xml\n",
-      "Transformation complete for 1735549082_ARCHIVESSPACE_OAI_archivesspace__repositories_4_resources_1.xml. Output saved to output/1735549082_ARCHIVESSPACE_OAI_archivesspace__repositories_4_resources_1_transformed.xml\n",
-      "Transformation complete for 1735549048_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_7.xml. Output saved to output/1735549048_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_7_transformed.xml\n",
-      "Transformation complete for 1735549041_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_2.xml. Output saved to output/1735549041_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_2_transformed.xml\n",
-      "Transformation complete for 1735549045_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_5.xml. Output saved to output/1735549045_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_5_transformed.xml\n",
-      "Transformation complete for 1735549058_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_15.xml. Output saved to output/1735549058_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_15_transformed.xml\n",
-      "Transformation complete for 1735549043_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_4.xml. Output saved to output/1735549043_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_4_transformed.xml\n",
-      "Transformation complete for 1735549042_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_3.xml. Output saved to output/1735549042_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_3_transformed.xml\n",
-      "Transformation complete for 1735549082_ARCHIVESSPACE_OAI_archivesspace__repositories_4_resources_23.xml. Output saved to output/1735549082_ARCHIVESSPACE_OAI_archivesspace__repositories_4_resources_23_transformed.xml\n",
-      "Transformation complete for 1735549063_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_17.xml. Output saved to output/1735549063_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_17_transformed.xml\n",
-      "Transformation complete for 1735549056_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_13.xml. Output saved to output/1735549056_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_13_transformed.xml\n",
-      "Transformation complete for 1735549082_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_20.xml. Output saved to output/1735549082_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_20_transformed.xml\n",
-      "Transformation complete for 1735549081_ARCHIVESSPACE_OAI_archivesspace__repositories_4_resources_21.xml. Output saved to output/1735549081_ARCHIVESSPACE_OAI_archivesspace__repositories_4_resources_21_transformed.xml\n",
-      "Transformation complete for 1735549080_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_19.xml. Output saved to output/1735549080_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_19_transformed.xml\n",
-      "Transformation complete for 1735549053_ARCHIVESSPACE_OAI_archivesspace__repositories_4_resources_11.xml. Output saved to output/1735549053_ARCHIVESSPACE_OAI_archivesspace__repositories_4_resources_11_transformed.xml\n",
-      "Transformation complete for 1735549062_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_16.xml. Output saved to output/1735549062_ARCHIVESSPACE_OAI_archivesspace__repositories_2_resources_16_transformed.xml\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "from lxml import etree\n",
-    "\n",
-    "# Define the input and output directories\n",
-    "input_dir = 'test-archivesspace'\n",
-    "output_dir = 'output'\n",
-    "xslt_file = 'xsl/own.xsl'\n",
-    "\n",
-    "# Load the XSLT file\n",
-    "xslt_tree = etree.parse(xslt_file)\n",
-    "transform = etree.XSLT(xslt_tree)\n",
+    "result_tree = transform(xml_tree)\n",
     "\n",
     "# Create the output directory if it doesn't exist\n",
+    "output_dir = 'output'\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
-    "# Iterate over all XML files in the input directory\n",
-    "for xml_file in os.listdir(input_dir):\n",
-    "    if xml_file.endswith('.xml'):\n",
-    "        xml_path = os.path.join(input_dir, xml_file)\n",
-    "        \n",
-    "        # Load the XML file\n",
-    "        xml_tree = etree.parse(xml_path)\n",
+    "# Generate the output filename\n",
+    "base_name = os.path.basename(xml_file)\n",
+    "name, ext = os.path.splitext(base_name)\n",
+    "output_file = os.path.join(output_dir, f'{name}_transformed{ext}')\n",
     "\n",
-    "        # Perform the transformation\n",
-    "        try:\n",
-    "            result_tree = transform(xml_tree)\n",
-    "        except etree.XSLTApplyError as e:\n",
-    "            print(f\"Transformation failed for {xml_file}: {e.error_log}\")\n",
-    "            for error in e.error_log:\n",
-    "                print(error.message)\n",
-    "            continue\n",
+    "# Save the result to the new file\n",
+    "result_tree.write(output_file, pretty_print=True, xml_declaration=True, encoding='UTF-8')\n",
     "\n",
-    "        # Check if the transformation was successful\n",
-    "        if result_tree.getroot() is None:\n",
-    "            print(f\"Transformation failed or produced an empty result for {xml_file}.\")\n",
-    "        else:\n",
-    "            # Generate the output filename\n",
-    "            name, ext = os.path.splitext(xml_file)\n",
-    "            output_file = os.path.join(output_dir, f'{name}_transformed{ext}')\n",
-    "\n",
-    "            # Save the result to the new file\n",
-    "            result_tree.write(output_file, pretty_print=True, xml_declaration=True, encoding='UTF-8')\n",
-    "\n",
-    "            print(f'Transformation complete for {xml_file}. Output saved to {output_file}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "964e584a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Merged file saved as xsl/MergedEADAnalyticstoMARC21slimXML.xsl\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "\n",
-    "def merge_xsl_files(main_file, utils_file, output_file):\n",
-    "    with open(utils_file, 'r', encoding='utf-8') as f:\n",
-    "        utils_content = f.read()\n",
-    "\n",
-    "    with open(main_file, 'r', encoding='utf-8') as f:\n",
-    "        main_content = f.read()\n",
-    "\n",
-    "    # Remove the XML declaration from both files if they exist\n",
-    "    if utils_content.startswith('<?xml'):\n",
-    "        utils_content = utils_content.split('?>', 1)[1].strip()\n",
-    "\n",
-    "    if main_content.startswith('<?xml'):\n",
-    "        main_content = main_content.split('?>', 1)[1].strip()\n",
-    "\n",
-    "    # Remove the import statement from the main file\n",
-    "    main_content = main_content.replace('<xsl:import href=\"MARC21slimUtils.xsl\" />', '')\n",
-    "\n",
-    "    # Ensure the utils content does not have its own closing xsl:stylesheet tag\n",
-    "    if utils_content.strip().endswith('</xsl:stylesheet>'):\n",
-    "        utils_content = utils_content.rsplit('</xsl:stylesheet>', 1)[0].strip()\n",
-    "\n",
-    "    # Ensure the main content does not have its own opening xsl:stylesheet tag\n",
-    "    if main_content.strip().startswith('<xsl:stylesheet'):\n",
-    "        main_content = main_content.split('>', 1)[1].strip()\n",
-    "\n",
-    "    # Merge the contents\n",
-    "    merged_content = '<?xml version=\"1.0\" encoding=\"UTF-8\" ?>\\n<xsl:stylesheet version=\"1.0\" xmlns:marc=\"http://www.loc.gov/MARC21/slim\" xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\">\\n' + utils_content + '\\n' + main_content + '\\n</xsl:stylesheet>'\n",
-    "\n",
-    "    with open(output_file, 'w', encoding='utf-8') as f:\n",
-    "        f.write(merged_content)\n",
-    "\n",
-    "    print(f\"Merged file saved as {output_file}\")\n",
-    "\n",
-    "# Define file paths\n",
-    "main_file = 'xsl/EADAnalyticstoMARC21slimXML.xsl'\n",
-    "utils_file = 'xsl/MARC21slimUtils.xsl'\n",
-    "output_file = 'xsl/MergedEADAnalyticstoMARC21slimXML.xsl'\n",
-    "\n",
-    "# Merge the files\n",
-    "merge_xsl_files(main_file, utils_file, output_file)"
+    "print(f'Transformation complete. Output saved to {output_file}')"
    ]
   },
   {
@@ -261,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.1"
   },
   "toc": {
    "base_numbering": 1,
